[package]
name = "ascii-pack-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.75"
darling = "0.20.3"
manyhow = "0.8.1"
prettyplease = "0.2.15"
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
thiserror = "1.0.50"
